Fixed bug with too long words in scammer description

--- a/client/board/board.less
+++ b/client/board/board.less
@@ -22,6 +22,7 @@
         word-break: break-all;
     }
     border-bottom: @border;
+    overflow: hidden;
 }
 
 .board-footer {
